# zzz-optimizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  assets.qrc  calc.cpp  calc.js  calculator.cpp  calculator.h  calculatorwidget.cpp  calculatorwidget.h  character.cpp  character.h  data.txt  disc.cpp  disc.h  discrender.cpp  discrender.h  discrender.ui  electron-builder.yml  home.cpp  index.html  library.cpp  librarywidget.cpp  librarywidget.h  main.cpp  main.js  mainwindow.h  navigation.cpp  package-lock.json  package.json  reference.cpp  resources.qrc  test.cpp  test.ui  vcpkg.json  wengine.cpp  wengine.h  wengines.json  (+3 more)
.github/: copilot-instructions.md
.github/workflows/: cmake-multi-platform.yml
assets/characters/Alice/: AliceCircleIcon.jxl  AliceIcon.jxl  AlicePortrait.jxl  MindscapeAliceFull.jxl  MindscapeAliceHalf.jxl  MindscapeAliceNone.jxl
assets/characters/Anby/: AnbyCircleIcon.jxl  AnbyIcon.jxl  AnbyPortrait.jxl  MindscapeAnbyFull.jxl  MindscapeAnbyHalf.jxl  MindscapeAnbyNone.jxl
assets/characters/Anton/: AntonCircleIcon.jxl  AntonIcon.jxl  AntonPortrait.jxl  MindscapeAntonFull.jxl  MindscapeAntonHalf.jxl  MindscapeAntonNone.jxl
assets/characters/Astra/: AstraCircleIcon.jxl  AstraIcon.jxl  AstraPortrait.jxl  MindscapeAstraFull.jxl  MindscapeAstraHalf.jxl  MindscapeAstraNone.jxl
assets/characters/Ben/: BenCircleIcon.jxl  BenIcon.jxl  BenPortrait.jxl  MindscapeBenFull.jxl  MindscapeBenHalf.jxl  MindscapeBenNone.jxl
assets/characters/Billy/: BillyCircleIcon.jxl  BillyIcon.jxl  BillyPortrait.jxl  MindscapeBillyFull.jxl  MindscapeBillyHalf.jxl  MindscapeBillyNone.jxl
assets/characters/Burnice/: BurniceCircleIcon.jxl  BurniceIcon.jxl  BurnicePortrait.jxl  MindscapeBurniceFull.jxl  MindscapeBurniceHalf.jxl  MindscapeBurniceNone.jxl
assets/characters/Caesar/: CaesarCircleIcon.jxl  CaesarIcon.jxl  CaesarPortrait.jxl  MindscapeCaesarFull.jxl  MindscapeCaesarHalf.jxl  MindscapeCaesarNone.jxl
assets/characters/Corin/: CorinCircleIcon.jxl  CorinIcon.jxl  CorinPortrait.jxl  MindscapeCorinFull.jxl  MindscapeCorinHalf.jxl  MindscapeCorinNone.jxl
assets/characters/Ellen/: EllenCircleIcon.jxl  EllenIcon.jxl  EllenPortrait.jxl  MindscapeEllenFull.jxl  MindscapeEllenHalf.jxl  MindscapeEllenNone.jxl
assets/characters/Evelyn/: EvelynCircleIcon.jxl  EvelynIcon.jxl  EvelynPortrait.jxl  MindscapeEvelynFull.jxl  MindscapeEvelynHalf.jxl  MindscapeEvelynNone.jxl
assets/characters/Grace/: GraceCircleIcon.jxl  GraceIcon.jxl  GracePortrait.jxl  MindscapeGraceFull.jxl  MindscapeGraceHalf.jxl  MindscapeGraceNone.jxl
assets/characters/Harumasa/: HarumasaCircleIcon.jxl  HarumasaIcon.jxl  HarumasaPortrait.jxl  MindscapeHarumasaFull.jxl  MindscapeHarumasaHalf.jxl  MindscapeHarumasaNone.jxl
assets/characters/Hugo/: HugoCircleIcon.jxl  HugoIcon.jxl  HugoPortrait.jxl  MindscapeHugoFull.jxl  MindscapeHugoHalf.jxl  MindscapeHugoNone.jxl
assets/characters/Jane/: JaneCircleIcon.jxl  JaneIcon.jxl  JanePortrait.jxl  MindscapeJaneFull.jxl  MindscapeJaneHalf.jxl  MindscapeJaneNone.jxl
assets/characters/Ju Fufu/: JuFufuCircleIcon.jxl  JuFufuIcon.jxl  JuFufuPortrait.jxl  MindscapeJuFufuFull.jxl  MindscapeJuFufuHalf.jxl  MindscapeJuFufuNone.jxl
assets/characters/Koleda/: KoledaCircleIcon.jxl  KoledaIcon.jxl  KoledaPortrait.jxl  MindscapeKoledaFull.jxl  MindscapeKoledaHalf.jxl  MindscapeKoledaNone.jxl
assets/characters/Lighter/: LighterCircleIcon.jxl  LighterIcon.jxl  LighterPortrait.jxl  MindscapeLighterFull.jxl  MindscapeLighterHalf.jxl  MindscapeLighterNone.jxl
assets/discs/: AstralVoice.jxl  BranchBladeSong.jxl  ChaosJazz.jxl  ChaoticMetal.jxl  DawnsBloom.jxl  FangedMetal.jxl  FreedomBlues.jxl  HormonePunk.jxl  InfernoMetal.jxl  KingoftheSummit.jxl  MoonlightLullaby.jxl  PhaethonsMelody.jxl  PolarMetal.jxl  ProtoPunk.jxl  PufferElectro.jxl  ShadowHarmony.jxl  ShockstarDisco.jxl  SoulRock.jxl  SwingJazz.jxl  ThunderMetal.jxl  WoodpeckerElectro.jxl  YunkuiTales.jxl
calculations/: calc.cpp  calc.h  types.h
characters/attack/: billy.json
characters/stun/: scalings.txt
characters/support/: astra.json
content/: calculator.cpp  calculator.h  character.h  library.cpp  reference.cpp  reference.h
data/: character.cpp  character.h  disc.cpp  disc.h  wengine.cpp  wengine.h
import/: scanner.h
old stuff/: index.js
old stuff?/: index.html  preload.js
older stuff/: colors.css
selectors/: charselector.cpp  charselector.h  discselector.cpp  discselector.h  wengineselector.cpp  wengineselector.h
src/main/: index.js
src/preload/: index.js
src/renderer/: index.html
(+248 files in other folders)
